classDiagram
    %% ===============================================================
    %% Vista de documentos (MongoDB) del modelo de ejecución V2.
    %% Cada 'assignment' es un evento/documento raíz; sus 'list_answers' van
    %% embebidas. 'Form' se referencia (es compartido e inmutable).
    %% ===============================================================

    class Assignment {
        +string id
        +string id_form
        +string id_person
        +string status
        +string started_by
        +string completed_by
        +string submitted_by
        +string started_at
        +string completed_at
        +string submitted_at
        %% {definitions?, scoring?, evaluation?, subscales?}; cada valor {value, type}
        +Jsonb result
        +Scheduled scheduled
        +Answer[] list_answers
    }

    class Scheduled {
        +string id
        +string id_assignment
        +string assigned_by
        +string available_from
        +string available_until
        +int time_limit_minutes
    }

    class Answer {
        +string id
        +string id_assignment
        +string id_question
        %% Origen: USER | CALCULATED (EAnswerSource). CALCULATED => answered_by null
        %% y el valor es un snapshot de question.expression al enviar (ver ADR 041).
        +string source
        +string answered_by
        %% {value, type}, mismos campos que un const del AST
        +JSON data
    }

    class Form {
        +string id
        +string key
        +string name
        +string description
        %% {scoring?, evaluation?, subscales?}
        +Jsonb expression
    }

    %% Assignment embebe sus list_answers (composición)
    Assignment "1" *-- "0..*" Answer : list_answers
    %% Scheduled es un subdocumento opcional embebido (solo flujo programado)
    Assignment "1" *-- "0..1" Scheduled : programa
    %% Form se referencia (agregación), no se embebe
    Assignment "1" o-- "1" Form : referencia
